trying to use docker testing

--- a/.github/workflows/tester.yml
+++ b/.github/workflows/tester.yml
@@ -45,39 +45,39 @@ jobs:
       - name: Run Unit tests
         run: pytest -p no:qgis tests/unit/
 
-  # test-qgis:
-  #   runs-on: ubuntu-latest
+  test-qgis:
+    runs-on: ubuntu-latest
 
-  #   container:
-  #     image: qgis/qgis:release-3_28
-  #     env:
-  #       CI: true
-  #       DISPLAY: ":1"
-  #       MUTE_LOGS: true
-  #       NO_MODALS: 1
-  #       PYTHONPATH: "/usr/share/qgis/python/plugins:/usr/share/qgis/python:."
-  #       QT_QPA_PLATFORM: "offscreen"
-  #       WITH_PYTHON_PEP: false
-  #       options: -v /tmp/.X11-unix:/tmp/.X11-unix -v ${{ github.workspace }}:/tests_directory
+    container:
+      image: qgis/qgis:release-3_28
+      env:
+        CI: true
+        DISPLAY: ":1"
+        MUTE_LOGS: true
+        NO_MODALS: 1
+        PYTHONPATH: "/usr/share/qgis/python/plugins:/usr/share/qgis/python:."
+        QT_QPA_PLATFORM: "offscreen"
+        WITH_PYTHON_PEP: false
+        options: -v /tmp/.X11-unix:/tmp/.X11-unix -v ${{ github.workspace }}:/tests_directory
 
-  #   steps:
-  #     - name: Get source code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Get source code
+        uses: actions/checkout@v4
 
-  #     - name: Print QGIS version
-  #       run: qgis --version
+      - name: Print QGIS version
+        run: qgis --version
 
-  #     - name: Setup plugin
-  #       run: qgis_setup.sh loopstructural
+      - name: Setup plugin
+        run: qgis_setup.sh loopstructural
 
 
-  #     - name: Install Python requirements
-  #       run: |
-  #         python3 -m pip install -U pip setuptools wheel
-  #         python3 -m pip install -U -r requirements/testing.txt
+      - name: Install Python requirements
+        run: |
+          python3 -m pip install -U pip setuptools wheel
+          python3 -m pip install -U -r requirements/testing.txt
 
-  #     - name: Run Unit tests
-  #       run: |
-  #         Xvfb :1 &
-  #         python3 -m pytest tests/qgis/
+      - name: Run Unit tests
+        run: |
+          Xvfb :1 &
+          python3 -m pytest tests/qgis/
 
