--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           python -m pip install -U pip setuptools wheel
           python -m pip install -U -r requirements/packaging.txt
+          python -m pip install --no-deps -U -r requirements/embedded.txt -t loopstructural/embedded_external_libs
 
       - name: Update translations
         run: pylupdate5 -noobsolete -verbose ${{ env.PROJECT_FOLDER }}/resources/i18n/plugin_translation.pro
