--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -33,8 +33,9 @@ jobs:
         run: |
           python -m pip install -U pip setuptools wheel
           python -m pip install -U -r requirements/packaging.txt
-          python -m pip install --no-deps -U -r requirements/embedded.txt -t loopstructural/embedded_external_libs
-
+          python -m pip install --no-deps -U -r requirements/embedded.txt -t ${{ env.PROJECT_FOLDER }}/embedded_external_libs
+          ls loopstructural
+          
       - name: Update translations
         run: pylupdate5 -noobsolete -verbose ${{ env.PROJECT_FOLDER }}/resources/i18n/plugin_translation.pro
 
