--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -38,8 +38,8 @@ jobs:
         python -m pip install -U pip setuptools wheel
         python -m pip install -U -r requirements/packaging.txt
 
-    - name: Compile translations
-      run: lrelease ${{ env.PROJECT_FOLDER }}/resources/i18n/*.ts
+    # - name: Compile translations
+    #   run: lrelease ${{ env.PROJECT_FOLDER }}/resources/i18n/*.ts
 
     - name : Get current changelog for ${GITHUB_REF/refs\/tags\//}
       run: qgis-plugin-ci changelog ${GITHUB_REF/refs\/tags\//} >> release.md
