--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -46,10 +46,15 @@ jobs:
 
 
     - name: Deploy plugin
+      env:
+        OSGEO_USERNAME: ${{ secrets.OSGEO_USERNAME }}
+        OSGEO_PASSWORD: ${{ secrets.OSGEO_PASSWORD }}
+
       run: >-
         qgis-plugin-ci
         release ${GITHUB_REF/refs\/tags\//}
-        --github-token ${{ secrets.GITHUB_TOKEN }}
         --allow-uncommitted-changes
         --create-plugin-repo
+        --osgeo-username "$env:OSGEO_USERNAME"
+        --osgeo-password "$env:OSGEO_PASSWORD"
 
