--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -30,6 +30,6 @@ jobs:
           curl -X POST \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/Loop3d/${{env.PACKAGE_NAME}}/actions/workflows/release.yml/dispatches \
-          -d '{"ref":"master"}'
+          https://api.github.com/repos/lachlangrose/${{env.PACKAGE_NAME}}/actions/workflows/releaser.yml/dispatches \
+          -d '{"ref":"main"}'
         
