--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,7 +19,8 @@ jobs:
         id: release
 
       - name: Debug release output
-        run: echo "release_created=${{ steps.release.outputs.release_created }}"     
+        run: echo "release_created=${{ steps.release.outputs.releases_created }}"
+  
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
     
