--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Trigger build for pypi and upload
         run: |
           curl -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: token ${{ secrets.SECRET_KEY }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/lachlangrose/${{env.PACKAGE_NAME}}/actions/workflows/releaser.yml/dispatches \
           -d '{"ref":"main"}'
