--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,17 +23,24 @@ jobs:
   
     outputs:
       release_created: ${{ steps.release.outputs.releases_created }}
+      tag_name: ${{ steps.release.outputs.loopstructural--tag_name }}
     
   package:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger build for pypi and upload
+      - name: Extract tag name
+        id: tag
+        run: |
+          full_tag="${{ needs.release-please.outputs.tag_name }}"
+          tag="${full_tag#*--}"  # removes everything before the --
+          echo "tag=$tag" >> $GITHUB_OUTPUT
+      - name: Trigger release.yml
         run: |
           curl -X POST \
-          -H "Authorization: token ${{ secrets.SECRET_KEY }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/lachlangrose/${{env.PACKAGE_NAME}}/actions/workflows/releaser.yml/dispatches \
-          -d '{"ref":"main"}'
+            -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/Loop3d/${{ env.PACKAGE_NAME }}/actions/workflows/release.yml/dispatches \
+            -d "{\"ref\":\"${{ steps.tag.outputs.tag }}\"}"
         
