--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -5,6 +5,7 @@ on:
       - main
 env:
     PACKAGE_NAME: plugin_loopstructural
+    ORGANISATION: lachlangrose
 permissions:
   contents: write
   pull-requests: write
@@ -41,6 +42,6 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GH_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/Loop3d/${{ env.PACKAGE_NAME }}/actions/workflows/release.yml/dispatches \
+            https://api.github.com/repos/${{env.ORGANISATION}}/${{ env.PACKAGE_NAME }}/actions/workflows/release.yml/dispatches \
             -d "{\"ref\":\"${{ steps.tag.outputs.tag }}\"}"
         
