--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Trigger release.yml
         run: |
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            -H "Authorization: token ${{ secrets.SECRET_KEY }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{env.ORGANISATION}}/${{ env.PACKAGE_NAME }}/actions/workflows/release.yml/dispatches \
             -d "{\"ref\":\"${{ steps.tag.outputs.tag }}\"}"
